--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -1,58 +1,5 @@
 <%- include('components/header') %>
 
-<div class="recipes">
-  <section id="recipe-1">
-    <h1>TIGHTROPE POWER FRITTATA</h1>
-
-    <div class="recipes1" style="background-image: url('../public/img/bg-recipes.png');">
-
-    <!-- Insert h2 and numbered list-style recipe paragraph inside bg image without being in grid containers - or if easier 
-      can be placed inside grid containers? -->
-      <!--
-      <h2>Recipe Subheading Placement</h2>
-    -->
-
-      <ol class="how-to">
-        <li>Massage kale under running tap for 2 minutes to wash and soften. </li>
-        <li>Chop vegetables. Cut broccoli into segments, cherry tomatoes into halves, kale leaf into fine strips. Finely chop onion.</li>
-        <li>Boil broccoli for 7 minutes</li>
-        <li>Heat oil in a non-stick frypan. Lightly fry broccoli, kale, cherry tomatoes, and onion.</li>
-        <li>Beat eggs and milk, pour over.</li>
-      </ol>
-
-
-    <div class="grid-container">
-
-
-      <img src="../public/img/eggs.png" alt="" class="eggs"/>
-
-      <img src="../public/img/frittata-in-pan.png" alt="" class="frittata"/>
-
-      <img src="../public/img/tightrope-walker.png" alt="" class="tightrope-power"/>
-
-    </div>
-
-
-    </div>
-  </section>
-
-  <section id="recipe-2">
-    <h1>CHOCOLATE CANNONBALL WAFFLES</h1>
-    <div class="recipes">
-      <div class="grid-container-2">
-        <img src="../public/img/cacao.png" alt="" class="chocolate" />
-
-        <img src="../public/img/chocolate-waffles.png" alt="" class="waffle" />
-
-        <img
-          src="../public/img/human-cannonball.png"
-          alt=""
-          class="cannonball-power"
-        />
-      </div>
-    </div>
-  </section>
-</div>
 
 <!-- Dynamic content retrived from database-->
 <!-- Counter -->
@@ -64,6 +11,9 @@
         <!-- Name and description elements -->
         <h1> <%= recipe.name %> </h1>
         <h2> <%= recipe.description %> </h2>
+
+
+        <div class="grid-container">
 
         <!-- Superfood, Character and recipe images -->
         <img class="superfood-img" src="<%= recipe.superfoodImg %>" alt="Superfood image"/>
@@ -85,7 +35,11 @@
         </div> 
 
         <!-- Method board styling -->
-        <div class="method-board">
+
+        
+        <div class="method-board" style="background-image: url('../public/img/bg-images-white-page.png');">
+        
+        <!-- bg image technique attempt -->
 
             <h3>Method</h3>
 
@@ -95,8 +49,14 @@
                 <p> <%= (methodCounter + 1) + ". " + method %> </p>
             <% methodCounter++ %>    
             <% }); %>
-
+        
         </div>
+        
+
+      </div>
+
+
+
     </section>
 <!-- Increment counter -->
 <% count++ %> 
