adds loading animation

--- a/frontend/views/superfoodcircus.ejs
+++ b/frontend/views/superfoodcircus.ejs
@@ -1,4 +1,4 @@
-<%- include('components/header') %>
+<%- include('components/header') %> <%- include('components/loading') %>
 <div class="page-content">
   <section>
     <h1>SUPERFOOD CIRCUS</h1>
