--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -27,7 +27,8 @@ ul {
 /* Headings */
 h1 {
   font-family: var(--heading-font-family);
-  font-size: 2em;
+  font-size: 2.5em;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -35,6 +36,7 @@ h2 {
   font-size: 1.4em;
   text-transform: uppercase;
   font-weight: 400;
+  color: var(--vita-yellow);
 }
 
 /* Links and Buttons */
@@ -309,6 +311,10 @@ nav li a {
 }
 
 /*  Main content styling */
+.page-content {
+  display: none;
+}
+
 .page-content,
 section {
   min-height: 100vh;
@@ -368,8 +374,6 @@ footer {
 }
 
 /* custom cursor styling */
-
-/* sparkles styles */
 #sparkles {
   position: fixed;
   top: 0;
@@ -380,7 +384,6 @@ footer {
   pointer-events: none;
 }
 
-/* sparkle animation */
 .sparkle {
   position: absolute;
   top: 0;
@@ -391,7 +394,6 @@ footer {
   animation: sparkle 1s ease-in-out forwards;
 }
 
-/* keyframes animation */
 @keyframes sparkle {
   0% {
     transform: scale(0);
@@ -400,5 +402,37 @@ footer {
   100% {
     transform: scale(2);
     opacity: 0;
+  }
+}
+
+/* loading animation styles */
+.loading-anim {
+  width: 500px;
+}
+
+.loading-txt {
+  margin: 50px 0;
+  letter-spacing: 10px;
+  font-family: var(--heading-font-family);
+  font-size: 30px;
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 80px);
+  margin-top: 80px;
+}
+
+@media only screen and (max-height: 600px), only screen and (max-width: 530px) {
+  .loading-anim {
+    width: 300px;
+  }
+
+  .loading-txt {
+    letter-spacing: 5px;
+    font-size: 20px;
   }
 }
