--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -1,5 +1,4 @@
-<%- include('components/header') %>
-
+<%- include('components/header') %> <%- include('components/loading') %>
 <div class="page-content">
   <section id="home">
     <div class="item1" data-aos="slide-right" data-aos-duration="1000">
