--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -1,4 +1,4 @@
-<%- include('components/header') %>
+<%- include('components/header') %> <%- include('components/loading') %>
 <div class="page-content">
   <!-- Questions and answers  -->
   <div class="question-wrapper">
