--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -12,7 +12,7 @@
 }
 
 #home h1 {
-  font-size: 45px;
+  font-size: 50px;
 }
 #home p {
   padding: 20px 0;
@@ -140,6 +140,10 @@
   #home {
     display: flex;
     flex-direction: column;
+  }
+
+  #home h1 {
+    font-size: 40px;
   }
 
   .item1 {
