--- a/frontend/public/css/recipes.css
+++ b/frontend/public/css/recipes.css
@@ -104,6 +104,7 @@
   width: 300px;
   bottom: 0;
   left: -200px;
+  z-index: 4;
 }
 
 .notebook-paper {
@@ -145,11 +146,153 @@
 }
 
 .notebook-paper .content {
-  font-size: 20px;
+  font-size: 1.2em;
   line-height: 30px;
   color: black;
 }
 
 .notebook-paper .content p {
   margin: 0 0 30px 0;
+}
+
+/*  Responsive */
+@media only screen and (max-width: 1600px) {
+  .notebook-paper {
+    width: 550px;
+  }
+
+  .superfood-img {
+    width: 150px;
+    top: -50px;
+  }
+
+  .character-img {
+    height: 300px;
+  }
+
+  .recipe-img {
+    width: 200px;
+    left: -100px;
+  }
+}
+
+@media only screen and (max-width: 1320px) {
+  .notebook-paper .content {
+    font-size: 1.1em;
+  }
+  .post-it li {
+    margin-bottom: 5px;
+    font-size: 1em;
+  }
+
+  .recipe h3 {
+    font-size: 1.2em;
+  }
+
+  .post-it {
+    width: 260px;
+  }
+
+  .notebook-paper {
+    padding-left: 90px;
+  }
+
+  .notebook-paper::before {
+    left: 80px;
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  .recipe {
+    grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(2, auto);
+    padding-top: 200px;
+  }
+
+  .recipe h1 {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+
+  .recipe h2 {
+    padding: 10px 0 0 0;
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+
+  .post-it {
+    grid-column: 1;
+    grid-row: 3;
+    margin-bottom: 0;
+  }
+
+  .character-img {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  .notebook-paper {
+    grid-column: 1/3;
+    grid-row: 4;
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .superfood-img {
+    right: 0;
+    top: 0;
+  }
+
+  .notebook-paper {
+    width: 90%;
+    padding: 120px 30px 100px 30px;
+  }
+
+  .notebook-paper::before {
+    display: none;
+  }
+
+  .recipe-img {
+    left: 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .recipe {
+    grid-template-columns: auto;
+  }
+
+  .recipe h1 {
+    grid-column: 1;
+    margin: 0 20px;
+  }
+
+  .recipe h2 {
+    grid-column: 1;
+    margin: 0 20px;
+  }
+
+  .recipe h3 {
+    text-align: left;
+  }
+
+  .notebook-paper h3 {
+    padding-left: 30px;
+  }
+
+  .post-it {
+    width: 90%;
+    transform: rotate(0);
+    justify-self: center;
+  }
+
+  .notebook-paper {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .character-img {
+    display: none;
+  }
 }
