fixes markup errors picked by W3C validator

--- a/frontend/views/quiz.ejs
+++ b/frontend/views/quiz.ejs
@@ -30,7 +30,11 @@
   <div id="show-circus-character">
     <div class="list-wrapper">
       <!-- Image -->
-      <img id="circus-img" src="" alt="Circus Character" />
+      <img
+        id="circus-img"
+        src="../public/img/unknown-character.png"
+        alt="Circus Character"
+      />
       <ul>
         <li id="score"></li>
 
