--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -61,6 +61,7 @@
       />
     </section>
     <!-- Increment counter -->
-    <% count++ %> <% }); %> <%- include('components/footer') %>
+    <% count++ %> <% }); %>
   </div>
 </div>
+<%- include('components/footer') %>
