--- a/frontend/views/components/loading.ejs
+++ b/frontend/views/components/loading.ejs
@@ -1,5 +1,7 @@
 <div class="loading">
   <div class="loading-anim">
+    <!-- Animated SVG generated from: https://www.svgator.com/
+    animation idea inspired by: https://codepen.io/Craaftx/pen/ExyYRMK -->
     <object
       data="../public/img/loading-animation-magician.svg"
       type="image/svg+xml"
