--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -277,6 +277,9 @@
 }
 
 /* contact us icons styling */
+
+/* contact us icon styles inspired by and re-produced from: https://codepen.io/salihbenlalla/pen/ExvayVe
+and: https://www.youtube.com/watch?v=zwl3kZPZ8H8  */
 .circle {
   position: relative;
   width: 100px;
