--- a/frontend/views/components/footer.ejs
+++ b/frontend/views/components/footer.ejs
@@ -1,4 +1,4 @@
-<footer><p>&copy;2022 The Red Team</p></footer>
+<footer><p>&copy;2022 The Red Team. </p><p><a href="/references">Click here to view the reference list</a></p></footer>
 <div id="sparkles"></div>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
