Created recipe page to display single recipe using Id

--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -9,13 +9,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <title>VitaFun</title>
   </head>
   <body>
     <nav>
       <!-- Image -->
-      <a href="/"><img src="img/vitafun-logo.png" alt="VitaFun's Logo" /></a>
+      <a href="/"><img src="/img/vitafun-logo.png" alt="VitaFun's Logo" /></a>
       <ul id="menu">
         <!-- Link to home -->
         <li class="link home">
