--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -9,7 +9,7 @@
     <% recipes.forEach(function(recipe) { %>
     <section class="recipe">
       <!-- Name and description elements -->
-      <h1><%= recipe.name %></h1>
+      <h1><a href="/recipe/ <%= recipe.id%>"><%= recipe.name %></a></h1>
       <h2><%= recipe.description %></h2>
 
       <!-- Post it note -->
