--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -14,7 +14,7 @@ body {
   font-family: var(--base-font-family);
   font-weight: 400;
   background: var(--background-blue);
-  cursor: url(../img/magic-ball.png), auto;
+  cursor: url(../img/cursor-wand.png), auto;
   overflow-x: hidden;
 }
 
