--- a/frontend/views/components/footer.ejs
+++ b/frontend/views/components/footer.ejs
@@ -3,7 +3,7 @@
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
-<script src="js/main.js"></script>
-<script src="js/quiz.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/quiz.js"></script>
 </body>
 </html>
