adds alt attribute values for images

--- a/frontend/views/components/loading.ejs
+++ b/frontend/views/components/loading.ejs
@@ -6,7 +6,10 @@
       data="../public/img/loading-animation-magician.svg"
       type="image/svg+xml"
     >
-      <img src="../public/img/loading-animation-magician.svg" alt="" />
+      <img
+        src="../public/img/loading-animation-magician.svg"
+        alt="a magician doing a floating trick on some superfoods"
+      />
     </object>
   </div>
   <div class="loading-txt"><p>LOADING...</p></div>
