adds and styles content for recipes page

--- a/frontend/views/recipe.ejs
+++ b/frontend/views/recipe.ejs
@@ -1,5 +1,5 @@
 <%- include('components/header') %><%- include('components/loading') %>
-<div class="page-content" id="recipe-page">
+<div class="page-content" id="single-recipe-page">
   <!-- For loop to itereate all recipes -->
   <% recipes.forEach(function(recipe) { %>
 
