adds superfood circus page content and styles

--- a/frontend/public/css/recipes-superfoods.css
+++ b/frontend/public/css/recipes-superfoods.css
@@ -1,28 +1,33 @@
-/*  Recipes page styling */
-#recipes-page {
+/*  Recipes page and Superfood Circus page styling */
+#recipes-page,
+#superfood-circus-page {
   width: 90%;
   margin: 100px auto 0 auto;
 }
 
-#recipes-page p {
+#recipes-page p,
+#superfood-circus-page p {
   margin-top: 5px;
 }
 
-.recipe-options {
+.recipe-options,
+.superfood-options {
   margin-top: 100px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 100px;
 }
 
-.recipe-option {
+.recipe-option,
+.superfood-option {
   text-align: center;
   position: relative;
   width: 300px;
   height: 300px;
 }
 
-.recipe-option .circle-gradient {
+.recipe-option .circle-gradient,
+.superfood-option .circle-gradient {
   width: 150px;
   position: absolute;
   top: 50%;
@@ -32,10 +37,16 @@
   z-index: -1;
 }
 
-.recipe-option .recipe-image {
+.recipe-option .recipe-image,
+.superfood-option .superfood-image {
   position: absolute;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.recipe-option img,
+.superfood-option img {
+  width: 294px;
 }
